comopsitor: only activate VRR if the active window is on the current screen

BUG: 481750
(cherry picked from commit af4e12c5fc03c4d5981a92010d7a50c3a2187d12)